tweaks to scss all over the place

--- a/ui/src/tsconfig.app.json
+++ b/ui/src/tsconfig.app.json
@@ -7,8 +7,5 @@
   "angularCompilerOptions": {
     "enableIvy": false
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["test.ts", "**/*.spec.ts"]
 }
